# td-ollama

./: .gitignore  Cargo.toml  LICENSE  biome.json  bun.lockb  package.json  turbo.json
.github/workflows/: ci-check-compile-desktop.yaml  ci-check-compile.yaml  ci-check-linting.yaml  ci.yaml
.husky/: pre-commit  pre-push
apps/desktop/: biome.json  next.config.mjs  package.json  postcss.config.mjs  tailwind.config.ts  turbo.json
apps/desktop/core/: Cargo.toml  tauri.conf.json
apps/desktop/core/src/: app_state.rs  main.rs
apps/desktop/core/src/bot/: discord_handler.rs  mod.rs  tauri_commands.rs  telegram_handler.rs  utils.rs
apps/desktop/core/src/ollama/: api.rs  mod.rs  tauri_commands.rs
apps/desktop/src/: core-api.ts  store.ts
apps/desktop/src/app/: _client-init.tsx  _ollama-control.tsx  _window-buttons.tsx  layout.tsx  not-found.tsx  page.tsx
apps/desktop/src/app/(home)/: _bot-card.tsx  _bot-cards-store.ts  _bot-cards.tsx  _bot-type-select.tsx  _delete-card-button.tsx  _ids-input.tsx  _model-select.tsx  _run-bot-button.tsx  _system-input.tsx  _token-input.tsx  page.tsx
apps/desktop/src/components/: ollama-error-toast.tsx
apps/desktop/src/components/ui/: button.tsx  dropdown-menu.tsx  password-input.tsx  select.tsx  separator.tsx  switch.tsx  textarea.tsx
apps/website/: components.json  next.config.mjs  package.json  tailwind.config.ts  turbo.json
apps/website/src/: lib.ts  meta.ts
apps/website/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/website/src/app/(home)/: _download-button.tsx  page.tsx
apps/website/src/app/for-devs/: page.tsx
apps/website/src/components/: external-link.tsx
core/: Cargo.toml  tauri.conf.json
core/src/: app_state.rs  bot.rs  main.rs  ollama.rs
core/src/bot/: handlers.rs  tauri_commands.rs
core/src/ollama/: api.rs  mod.rs  tauri_commands.rs
docker/: deb.Dockerfile  deb.compose.yaml
docs/: DEVELOPMENT.md  README.md
gui/: biome.json  components.json  next.config.mjs  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
gui/src/: core-api.ts  store.ts
gui/src/app/: _bot_card.tsx  _bot_cards.tsx  _client-init.tsx  _ollama-control.tsx  _window-buttons.tsx  layout.tsx  page.tsx
gui/src/components/: ollama-error-toast.tsx
gui/src/components/ui/: alert-dialog.tsx  dropdown-menu.tsx  password-input.tsx  select.tsx  switch.tsx
(+1 files in other folders)
