cargo-features = ["profile-rustflags"]

[package]
name = "tg-ollama-core"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-rc.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.13", features = ["macros"] }
serenity = "0.12"
sysinfo = "0.31.2"
reqwest = { version = "0.12.7", features = ["stream"] }
futures = "0.3.30"
bytes = "=1.7.1"
tauri-plugin-shell = "2.0.0-rc.2"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
rustflags = ["-Z", "threads=8"]

[profile.release]
rustflags = ["-Z", "threads=8"]
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
strip = true
