cargo-features = ["profile-rustflags"]

[package]
name = "td-ollama-core"
version = "1.0.0"
edition = "2021"

[dependencies]
# core
tauri = { version = "2.0.0-rc.5", features = [] }
teloxide = { version = "0.13", features = ["macros"] }
tauri-plugin-shell = "2.0.0-rc.2"
serenity = "0.12"
# utils (versions are optimized to be reused in project from core deps)
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sysinfo = "*"
reqwest = { version = "*", features = ["stream"] }
futures = "*"
bytes = "*"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
rustflags = ["-Z", "threads=8"]

[profile.release]
rustflags = ["-Z", "threads=8"]
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
strip = true
